[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/map_maker/map_maker_window.gd" type="Script" id=1]

[node name="map_window" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 60.0
margin/right = 1693.0
margin/bottom = 766.0
popup/exclusive = false
window/title = ""
script/script = ExtResource( 1 )

[node name="scrollbar" type="HScrollBar" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 494.5
margin/top = 22.0
margin/right = -595.5
margin/bottom = 10.0
range/min = 0.0
range/max = 1.0
range/step = 0.0
range/page = 1000.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="map" type="Node2D" parent="."]

[node name="sprite_map" type="Node2D" parent="map"]

[node name="room_map" type="Node2D" parent="map"]

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 180.0
margin/right = 30.0
margin/bottom = 220.0

[node name="sprite_map_toggle" type="CheckButton" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 76.0
margin/bottom = 22.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Control 2" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 120.0
margin/right = 30.0
margin/bottom = 160.0

[node name="room_map_toggle" type="CheckButton" parent="Control 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 76.0
margin/bottom = 22.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="about_to_show" from="." to="." method="load_map"]

[connection signal="popup_hide" from="." to="." method="unload_map"]

[connection signal="value_changed" from="scrollbar" to="." method="_on_scrollbar_value_changed"]

[connection signal="toggled" from="Control/sprite_map_toggle" to="." method="_on_sprite_map_toggled"]

[connection signal="toggled" from="Control 2/room_map_toggle" to="." method="_on_room_map_toggled"]


